# gen-fraud-graph

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dep-scan.yml  license-check.yml  pattern-check.yml  release.yml
examples/: basic_usage.py
src/gen_fraud_graph/: __init__.py  cli.py  config.py  embeddings.py  exporters.py  generator.py  typologies.py  verify.py
tests/: test_coverage.py  test_generator.py
